Fixed icon alignment

--- a/src/blocks/list-line-item/style.scss
+++ b/src/blocks/list-line-item/style.scss
@@ -9,7 +9,7 @@
   padding: var(--theme-spacing-xl) 0;
   width: 100%;
   display: flex;
-  align-items: center;
+  align-items: start;
   flex-direction: row;
   gap: var(--theme-spacing-xxs);
   border-top: 1px solid var(--theme-color-layer_3);
